--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<html>
+    <head>
+        <title>My Page Title</title>
+    </html>head>
+<body>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <p>Here is more text</p>
+
+    <img src="download.png">
+</body>
+</html>
