--- a/index.html
+++ b/index.html
@@ -1,12 +1,148 @@
-<html>
+<!DOCTYPE html>
+<html lang ="en">
     <head>
-        <title>My Page Title</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device=width, initial-scale=1.0">
+        <meta name="description" content="Meet the Characters of Witch's Delight">
+        <title>Meet the Characters</title>
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
 <body>
-    <h1>Hello World!</h1>
-    <h1>Hello World!</h1>
-    <p>Here is more text</p>
+    <header id="main-header">
+        <h1>The Characters of Witch's Delight</h1>
+        <p>Meet this motley crew of characrters who roam the world of Aepaxius</p>
+        <nav>
+            <a href="characters">Characters</a> |
+            <a href="relationships">Party Dynamics</a> |
+            <a href="https://www.dndbeyond.com" target="_blank">D&D Beyond</a>
+        </nav>
+    </header>
+    
+    <section id="characters">
+        <h2>Characrer Profiles</h2>
+        <div class="character-card">
+            <h3>Franny</h3>
+            <img src="Franny.jpg" alt="Franny" width="200">
+            <p><strong>Race:</strong> Changeling, <strong>Class:</strong> Bard</p>
+            <p>Originally destined to inherit the Ballad Weapons Trading Company, 
+                Franziska is a changeling tasked with replacing the company’s original 
+                heir. Unaware of her initial failure to kidnap the rightful daughter, 
+                she only learned of it years later, when the campaign began. By then, 
+                her resolve had shifted—Franziska no longer wished to deliver the child 
+                and sought instead to protect her, driven by guilt and fear of the child’s 
+                potential wrath. When the time came for the party—Franziska, Kelne, Aldous, Zofhime, 
+                and the child—to return home through a portal to the Prime Material Plane, 
+                her fey superiors intervened. Manipulating the portal, they forcibly took the 
+                child and Kelne into the fey realm instead, leaving Franziska with unanswered 
+                questions, a heavy conscience, and the weight of decisions she had little power 
+                to change. Even now, the consequences of that fateful moment continue to shape her journey.</p>
+            <h4>Stats</h4>
+            <ul>
+              <li>Strength: 11</li>
+              <li>Dexterity: 17</li>
+              <li>Constitution: 14</li>
+              <li>Intelligence: 13[value]</li>
+              <li>Wisdom: 11</li>
+              <li>Charisma: 20</li>
+            </ul>
+            <h4>Equipment</h4>
+            <p>BattlePipes, Cloak of Displacement, 
+                Glamoured Studded leather, 
+                Reveler's Concertina</p>l p>
+        </div>
 
-    <img src="download.png">
+        <div class="character-card">
+            <h3>Zofhime</h3>
+            <img src="zofhime.jpg" alt="Zofhime" width="200">
+            <p><strong>Race:</strong> Aasimar, <strong>Class:</strong> Artificer/Warlock</p>
+            <p>Zofhime, a natural prodigy in potion-making, grew up in a humble southern Aurian village, 
+                where he became a vital resource for crafting remedies and tonics. 
+                His talent followed him into his adventuring party, where he 
+                often took the lead—though not always successfully. Over time, 
+                he transformed from relying heavily on his patron’s guidance 
+                to becoming a self-reliant individual, earning his patron’s respect 
+                along the way. During a shared dream conjured by 
+                Endelyn Moongrave, the Dame of Unhappy Endings, Zofhime witnessed 
+                the tragic death of Torin, a figure from his past. While the memory 
+                lingers, shaping his resolve, the full story of Zofhime’s growth remains 
+                intertwined with the secrets he keeps. </p>
+            <h4>Stats</h4>
+            <ul>
+              <li>Strength: 10</li>
+              <li>Dexterity: 16</li>
+              <li>Constitution: 16</li>
+              <li>Intelligence: 20</li>
+              <li>Wisdom: 14</li>
+              <li>Charisma: 10</li>
+            </ul>
+            <h4>Equipment</h4>
+            <p>All-Purpose Tool, Bag of beans, 
+                Cloak of Protection, Pearl of Power</p>
+          </div>
+
+          <div class="character-card">
+            <h3>Aldous Caesar</h3>
+            <img src="aldous.jpg" alt="Aldous Caesar" width="200">
+            <p><strong>Race:</strong> Half-Elf, <strong>Class:</strong> Bard/Sorcerer</p>
+            <p>Aldous Caesar, a consummate conman, has spent most of his life evading 
+                just about everything: the law, responsibility, the touch of a woman. 
+                His chaotic and unpredictable nature has often worked to his advantage, 
+                especially when it comes to lining his pockets. But could there be a reason
+                behind the madness? Aldous guards his past like a fortress, steering clear 
+                of any conversation that might reveal it. The only glimpse into his history 
+                surfaced during a tormenting dream—a surreal experience conjured by Endelyn Moongrave, 
+                the Dame of Unhappy Endings. The party, unaware they were trapped in a dreamscape, 
+                encountered Dizzy—a woman from Aldous’s past whose sudden appearance was attributed 
+                to fey magic. In a haunting twist, Dizzy met her demise within the dream, casting a 
+                shadow of grief and mystery over her connection to Aldous. What secrets lie hidden in 
+                Aldous's peculiar past? Only time will tell how his strange history shapes the man behind the mask.</p>
+            <h4>Stats</h4>
+            <ul>
+              <li>Strength: 9</li>
+              <li>Dexterity: 16</li>
+              <li>Constitution: 19</li>
+              <li>Intelligence: 10</li>
+              <li>Wisdom: 11</li>
+              <li>Charisma: 20</li>
+            </ul>
+            <h4>Equipment</h4>
+            <p>Grin's Shadow Ward, Ring of Shooting Stars, Pipes of Haunting, Wand of the War Mage</p>
+          </div>
+
+          <div class="character-card">
+            <h3>Quinn</h3>
+            <img src="quinn.jpg" alt="Quinn" width="200">
+            <p><strong>Race:</strong> Human, <strong>Class:</strong> Fighter/Ranger</p>
+            <p>Quinn, a newcomer to the party, joined in the aftermath of the chaotic and 
+                bewildering loss of Kelne and the child during the group’s return to the 
+                Prime Material Plane from the Feywild. Wielding a perilous weapon known as 
+                'Experiment 42,' she quickly became a focal point of the party's attention, 
+                particularly after they glimpsed a vision foretelling a future of catastrophic 
+                destruction. It was later revealed that Quinn is on the run from Harion after 
+                sabotaging a top-secret testing facility for the Ballad Company, where she had 
+                worked as an engineer. Her actions were driven by the discovery of plans for a 
+                looming war between Valios and Toleria, with Harion acting as a weapons supplier to 
+                Valios. With her family—miners employed by the Ballad Company—potentially at risk, 
+                and shadowy forces likely pursuing her, Quinn’s presence brings both uncertainty and 
+                danger to the party’s journey.</p>
+            <h4>Stats</h4>
+            <ul>
+              <li>Strength: 10</li>
+              <li>Dexterity: 20</li>
+              <li>Constitution: 16</li>
+              <li>Intelligence: 20</li>
+              <li>Wisdom: 16</li>
+              <li>Charisma: 10</li>
+            </ul>
+            <h4>Equipment</h4>
+            <p>Studded Leather +2, Ring of Spell Storing, Winged Boots, Pistol(Experiment 42), Flask of Retaliation</p>
+          </div>
+    </section>
+
+
+    <!--<img src="download.png">-->
+    <footer>
+        <p>&copy; 2025 Victor Olugbusi. May your hits always crit and your characters never quit!</p>
+    </footer>
 </body>
 </html>
