add character portraits

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Characrer Profiles</h2>
         <div class="character-card">
             <h3>Franny</h3>
-            <img src="Franny.jpg" alt="Franny" width="200">
+            <img src="frannie.jpg" alt="Franny" width="200">
             <p><strong>Race:</strong> Changeling, <strong>Class:</strong> Bard</p>
             <p>Originally destined to inherit the Ballad Weapons Trading Company, 
                 Franziska is a changeling tasked with replacing the company’s original 
@@ -53,7 +53,7 @@
 
         <div class="character-card">
             <h3>Zofhime</h3>
-            <img src="zofhime.jpg" alt="Zofhime" width="200">
+            <img src="Zofhime.PNG" alt="Zofhime" width="200">
             <p><strong>Race:</strong> Aasimar, <strong>Class:</strong> Artificer/Warlock</p>
             <p>Zofhime, a natural prodigy in potion-making, grew up in a humble southern Aurian village, 
                 where he became a vital resource for crafting remedies and tonics. 
@@ -82,7 +82,7 @@
 
           <div class="character-card">
             <h3>Aldous Caesar</h3>
-            <img src="aldous.jpg" alt="Aldous Caesar" width="200">
+            <img src="Aldous.png" alt="Aldous Caesar" width="200">
             <p><strong>Race:</strong> Half-Elf, <strong>Class:</strong> Bard/Sorcerer</p>
             <p>Aldous Caesar, a consummate conman, has spent most of his life evading 
                 just about everything: the law, responsibility, the touch of a woman. 
@@ -111,7 +111,7 @@
 
           <div class="character-card">
             <h3>Quinn</h3>
-            <img src="quinn.jpg" alt="Quinn" width="200">
+            <img src="quinn.jpeg" alt="Quinn" width="200">
             <p><strong>Race:</strong> Human, <strong>Class:</strong> Fighter/Ranger</p>
             <p>Quinn, a newcomer to the party, joined in the aftermath of the chaotic and 
                 bewildering loss of Kelne and the child during the group’s return to the 
