--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h4>Equipment</h4>
             <p>BattlePipes, Cloak of Displacement, 
                 Glamoured Studded leather, 
-                Reveler's Concertina</p>l p>
+                Reveler's Concertina</p>
         </div>
 
         <div class="character-card">
