actually added the images this time

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <li>Strength: 11</li>
               <li>Dexterity: 17</li>
               <li>Constitution: 14</li>
-              <li>Intelligence: 13[value]</li>
+              <li>Intelligence: 13</li>
               <li>Wisdom: 11</li>
               <li>Charisma: 20</li>
             </ul>
