--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <h1>The Characters of Witch's Delight</h1>
         <p>Meet this motley crew of characrters who roam the world of Aepaxius</p>
         <nav>
-            <a href="characters">Characters</a> |
-            <a href="relationships">Party Dynamics</a> |
+            <a href="#characters">Characters</a> |
             <a href="https://www.dndbeyond.com" target="_blank">D&D Beyond</a>
         </nav>
     </header>
