should be done, more edits are for beauty

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="characters">
         <h2>Characrer Profiles</h2>
         <div class="character-card">
-            <h3>Franny</h3>
+            <h3>Franziska Ballad</h3>
             <img src="frannie.jpg" alt="Franny" width="200">
             <p><strong>Race:</strong> Changeling, <strong>Class:</strong> Bard</p>
             <p>Originally destined to inherit the Ballad Weapons Trading Company, 
@@ -51,7 +51,7 @@
         </div>
 
         <div class="character-card">
-            <h3>Zofhime</h3>
+            <h3>Zofhime Brace</h3>
             <img src="Zofhime.PNG" alt="Zofhime" width="200">
             <p><strong>Race:</strong> Aasimar, <strong>Class:</strong> Artificer/Warlock</p>
             <p>Zofhime, a natural prodigy in potion-making, grew up in a humble southern Aurian village, 
@@ -109,7 +109,7 @@
           </div>
 
           <div class="character-card">
-            <h3>Quinn</h3>
+            <h3>Quincy Tipton</h3>
             <img src="quinn.jpeg" alt="Quinn" width="200">
             <p><strong>Race:</strong> Human, <strong>Class:</strong> Fighter/Ranger</p>
             <p>Quinn, a newcomer to the party, joined in the aftermath of the chaotic and 
